[package]
name = "stylus"
version = "0.10.0"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2021"
description = "Stylus (style + status) is a lightweight status page for home infrastructure."
license = "MIT"
repository = "https://github.com/mmastrac/stylus"
readme = "README.md"

[dependencies]
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
derive_more = "0.99"
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = { version = "1", features = ["raw_value"] }
serde-aux = "4"
humantime-serde = "1.1.1"
walkdir = "2.3.2"
handlebars = "4.2.2"
subprocess = "0.2.8"
log = "0.4.17"
env_logger = "0.10"
itertools = "0.10"
structopt = "0.3"
structopt-flags = "0.3"
keepcalm = { version = "0.1.5", features = ["serde"] }
ctrlc = "3"

[profile.release]
codegen-units = 1
incremental = false
