[package]
name = "stylus"
version = "0.11.0"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2021"
description = "Stylus (style + status) is a lightweight status page for home infrastructure."
license = "MIT"
repository = "https://github.com/mmastrac/stylus"
readme = "README.md"

[dependencies]
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.5", features = ["util", "make"] }
derive_more = { version = "2", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = { version = "1", features = ["raw_value"] }
serde-aux = "4"
humantime-serde = "1.1.1"
walkdir = "2.3.2"
handlebars = "6.3"
subprocess = "0.2.8"
log = "0.4.17"
env_logger = "0.11"
itertools = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
keepcalm = { version = "0.4.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
codegen-units = 1
incremental = false
