[workspace]
resolver = "2"
members = [
    "crates/stylus",
    "crates/stylus-ui",
]
default-members = ["crates/stylus"]

[workspace.package]
version = "0.17.0"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mmastrac/stylus"
readme = "README.md"

[workspace.dependencies]
stylus-ui = { path = "crates/stylus-ui", version = "=0.17.0" }
